made some edits

--- a/index.html
+++ b/index.html
@@ -12,8 +12,16 @@
     <div id="container">
         <div class="main-col">
           <h1>Finn's Fishbowl</h1>
-          <p>by Romy Aboudarham</p>
-          <a id="next-btn" href="intro.html" class="rainbow">Ready?</a>
+          <p>Follow the <b>red arrow</b> pointing <b>left.</b> <br> Press play to begin
+          </p>
+          <!-- Audio -->
+          <div class="audio-div">
+            <audio id="intro_audio" controls src="media/intro_audio.mp4"></audio>
+              <a id="transcribe-btn" href="">Display audio transcription</a>
+          </div>
+          <div class="nav-btns">
+            <a href="chapter-1.html" id="next-btn" class="rainbow">Ch. 1 &#x2192;</a>
+          </div>
         </div>
       </div>
 </body>
