--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <a id="transcribe-btn" href="">Display audio transcription</a>
           </div>
           <div class="nav-btns">
-            <a href="chapter-1.html" id="next-btn" class="rainbow">Ch. 1 &#x2192;</a>
+            <a href="guide-ch1.html" id="next-btn" class="rainbow">Ch. 1 &#x2192;</a>
           </div>
         </div>
       </div>
