added accessibility box in ch1 and moved bowl in ch3

--- a/guide-ch1.html
+++ b/guide-ch1.html
@@ -14,8 +14,11 @@
           <h1>Chapter 1</h1>
           <p>
             If able, place <b>both feet</b> on <b>green footprints</b> 
-            <br> &#x267F; Wait at next red arrow and Listen along.
           </p>
+          <input type="button" id="access-btn" href="" value="Show &#x267F; Instructions" onclick="toggle_visibility('access-btn', 'accessability-box')"/>
+          <div id="accessability-box" style="display:none;">
+            <p> &#x267F; Wait at next red arrow and Listen along.</p>
+          </div>
           <div class="audio-div">
             <p>
               Press play to begin
