cleaned up story pages and models

--- a/guide-ch1.html
+++ b/guide-ch1.html
@@ -17,7 +17,9 @@
           </p>
           <input type="button" id="access-btn" href="" value="Show &#x267F; Instructions" onclick="toggle_visibility('access-btn', 'accessability-box')"/>
           <div id="accessability-box" style="display:none;">
-            <p> &#x267F; Wait at next red arrow and Listen along.</p>
+            1. Move along with audio OR go straight to 11th footstep.
+            <br>
+            2. When you hear <i>"eleven"</i>, press the button on the wall to your right.
           </div>
           <div class="audio-div">
             <p>
