--- a/guide-ch2.html
+++ b/guide-ch2.html
@@ -14,7 +14,9 @@
       <h1>Chapter 2</h1>
       <div class="audio-div">
         <p>
-          Press play to begin
+          Explore Finn's Fishbowl :)
+          <br>
+          Press play to begin.
         </p>
         <audio id="intro_audio" controls src="media/Ch2-audio.mp3"></audio>
           <input type="button" id="transcribe-btn" href="" value="Show Audio Transcription" onclick="toggle_visibility('transcribe-btn', 'transcription-box')"/>
