--- a/guide-ch3.html
+++ b/guide-ch3.html
@@ -13,8 +13,15 @@
         <div class="main-col">
           <h1>Chapter 3</h1>
           <p>
-            Plug your headphones from
-            this device into the VR headset.
+            Remove your headphones <br> (Put them back or hold onto them)
+            <br>
+            <i>Choose:</i>
+            <br>
+            <i>With VR:</i> Sit on the chair and put on VR headset (adjust headstraps if necessary).
+            <br>
+            <br>
+            <i>No VR:</i>  Watch on the screen.
+            <br>
           </p>
           <div class="nav-btns">
             <a href="guide-ch2.html" id="back-btn" class="rainbow">&#x2190; Ch. 2</a>
