--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="main-col">
           <h1>Finn's Fish Bowl</h1>
             <p>
-              Follow the <b>red arrow</b> pointing <b>left.</b>
+              Follow the <b>red arrow</b> on the ground to the <b>left.</b>
             </p>
           <div class="audio-div">
             <p>
