made mobile friendly

--- a/guide-ch3.html
+++ b/guide-ch3.html
@@ -17,7 +17,7 @@
             <br>
             <i>Choose:</i>
             <br>
-            <i>With VR:</i> Sit on the chair and put on VR headset (adjust headstraps if necessary).
+            <i>With VR:</i> Sit on the chair and put on VR-Headset (adjust headstraps if necessary).
             <br>
             <br>
             <i>No VR:</i>  Watch on the screen.
