--- a/guide-ch1.html
+++ b/guide-ch1.html
@@ -13,7 +13,11 @@
         <div class="main-col">
           <h1>Chapter 1</h1>
           <p>
-            If able, place <b>both feet</b> on <b>green footprints</b> 
+            When the person in front of you
+            <br>
+            reaches the <b>last footstep</b>,
+            <br>
+            place <b>both feet</b> on <b>green footprints</b>
           </p>
           <input type="button" id="access-btn" href="" value="Show &#x267F; Instructions" onclick="toggle_visibility('access-btn', 'accessability-box')"/>
           <div id="accessability-box" style="display:none;">
