--- a/guide-ch3.html
+++ b/guide-ch3.html
@@ -13,14 +13,11 @@
         <div class="main-col">
           <h1>Chapter 3</h1>
           <p>
-            Remove your headphones <br> (Put them back or hold onto them)
+            Remove your headphones.
             <br>
-            <i>Choose:</i>
+            <b>Sit on the chair</b> and <b>put on VR-Headset</b>
             <br>
-            <i>With VR:</i> Sit on the chair and put on VR-Headset (adjust headstraps if necessary).
-            <br>
-            <br>
-            <i>No VR:</i>  Watch on the screen.
+            <b>or</b> watch on the screen.
             <br>
           </p>
           <div class="nav-btns">
